--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,5 +41,5 @@ markers = [
 [[tool.poetry.source]]
 name = "testpypi"
 url = "https://test.pypi.org/simple/"
-default = false
-secondary = false
+priority = "supplemental"
+
