--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
-name = "pysco-db"
+name = "psyco-db"
 version = "0.1.0"
-description = "A Python PostgreSQL database utility"
+description = "A Python PostgreSQL database utility with connection pooling"
 authors = ["Ove Ranheim <oranheim@gmail.com>"]
-readme = "README.md"
+readme = "docs/index.rst"
 packages = [{ include = "psyco_db", from = "src" }]
 license = "MIT"
 classifiers = [
@@ -12,19 +12,28 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
+    "Topic :: Database",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Typing :: Typed"
 ]
+homepage = "https://github.com/descoped/psyco-db"
+repository = "https://github.com/descoped/psyco-db"
+documentation = "https://github.com/descoped/psyco-db/tree/master/docs"
+keywords = ["postgresql", "database", "async", "pool", "psycopg"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pydantic = "^2.10.5"
 psycopg = "^3.2.3"
 psycopg-pool = "^3.2.4"
 tenacity = "^9.0.0"
+pydantic = "^2.10.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
 pytest-asyncio = "^0.25.2"
-flake8 = "^6.1.0"
+flake8 = "^7.1.0"
+restructuredtext-lint = "^1.4.0"
+pygments = "^2.19.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -34,13 +43,7 @@ build-backend = "poetry.core.masonry.api"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 asyncio_mode = "auto"
-asyncio_default_fixture_loop_scope = "function"  # Add this line
+asyncio_default_fixture_loop_scope = "function"
 markers = [
     "asyncio: mark test as async",
 ]
-
-[[tool.poetry.source]]
-name = "testpypi"
-url = "https://test.pypi.org/simple/"
-priority = "supplemental"
-
