--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
-[tool.poetry]
+[project]
 name = "psycopg-toolkit"
 version = "0.1.7"
 description = "A Python PostgreSQL database utility with connection pooling"
-authors = ["Ove Ranheim <oranheim@gmail.com>"]
-readme = "docs/readme.md"
-packages = [{ include = "psycopg_toolkit", from = "src" }]
-license = "MIT"
+authors = [
+    { name = "Ove Ranheim", email = "oranheim@gmail.com" }
+]
+requires-python = ">=3.11"
+readme = "README.md"
+license = { text = "MIT" }
+keywords = ["postgresql", "database", "async", "pool", "psycopg", "jsonb", "repository-pattern"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
@@ -15,34 +18,81 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Database",
+    "Topic :: Database :: Database Engines/Servers",
     "Topic :: Software Development :: Libraries :: Python Modules",
-    "Typing :: Typed"
+    "Typing :: Typed",
+    "License :: OSI Approved :: MIT License",
+    "Framework :: AsyncIO",
+    "Framework :: Pydantic :: 2",
 ]
-homepage = "https://github.com/descoped/psycopg-toolkit"
-repository = "https://github.com/descoped/psycopg-toolkit"
-documentation = "https://github.com/descoped/psycopg-toolkit/tree/master/docs"
-keywords = ["postgresql", "database", "async", "pool", "psycopg"]
+dependencies = [
+    "psycopg>=3.2.3",
+    "psycopg-pool>=3.2.4",
+    "tenacity>=9.0.0",
+    "pydantic>=2.10.5",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-psycopg = "^3.2.3"
-psycopg-pool = "^3.2.4"
-tenacity = "^9.0.0"
-pydantic = "^2.10.5"
-
-[tool.poetry.group.test.dependencies]
-pytest = "^8.3.0"
-pytest-asyncio = "^0.25.2"
-testcontainers = {extras = ["postgresql"], version = "^4.9.1"}
-
-[tool.poetry.group.dev.dependencies]
-flake8 = "^7.1.0"
-restructuredtext-lint = "^1.4.0"
-pygments = "^2.19.1"
+[dependency-groups]
+test = [
+    "pytest>=8.3.0",
+    "pytest-asyncio>=0.25.2",
+    "pytest-cov>=6.0.0",
+    "testcontainers[postgresql]>=4.9.1",
+    "psutil>=6.1.0",  # For performance benchmarks
+]
+dev = [
+    "ruff>=0.8.0",
+    "restructuredtext-lint>=1.4.0",
+    "pygments>=2.19.1",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling>=1.26.3"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/psycopg_toolkit"]
+
+[tool.hatch.build]
+exclude = [
+    "docs/*",
+    "examples/*",
+    "tests/*",
+    ".github/*",
+    "scripts/*",
+    "ai_docs/*",
+    "*.gif",
+    "*.png",
+    "dist/*",
+    "build/*",
+    ".pytest_cache",
+    "__pycache__",
+    "*.pyc",
+    ".coverage",
+    "htmlcov/*",
+    ".ruff_cache/*",
+    ".venv/*",
+    ".env",
+    "*.egg-info/",
+    ".claude/*",
+    "uv.lock",
+]
+
+[project.urls]
+Homepage = "https://github.com/descoped/psycopg-toolkit"
+Repository = "https://github.com/descoped/psycopg-toolkit"
+Documentation = "https://github.com/descoped/psycopg-toolkit/tree/master/docs"
+Issues = "https://github.com/descoped/psycopg-toolkit/issues"
+
+[[tool.uv.index]]
+name = "pypi"
+url = "https://pypi.org/simple/"
+publish-url = "https://upload.pypi.org/legacy/"
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -51,7 +101,91 @@ asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
 markers = [
     "asyncio: mark test as async",
+    "integration: mark test as integration test requiring database",
+    "performance: mark test as performance benchmark",
+]
+addopts = [
+    "--verbose",
+    "--strict-markers",
+    "--tb=short",
 ]
 
-[tool.poetry.scripts]
-make-readme = "scripts.make_readme:main"
+[tool.coverage.run]
+source = ["src/psycopg_toolkit"]
+branch = true
+omit = [
+    "*/tests/*",
+    "*/examples/*",
+    "*/__init__.py",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "@abstractmethod",
+    "@abc.abstractmethod",
+]
+precision = 2
+show_missing = true
+skip_covered = false
+
+[tool.ruff]
+target-version = "py311"
+line-length = 120
+indent-width = 4
+respect-gitignore = true
+extend-exclude = [
+    "__pycache__",
+    ".pytest_cache",
+    "build",
+    "dist",
+    ".venv",
+    ".env",
+    "htmlcov",
+]
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "N",   # pep8-naming
+    "UP",  # pyupgrade
+    "C4",  # flake8-comprehensions
+    "B",   # flake8-bugbear
+    "A",   # flake8-builtins
+    "T20", # flake8-print
+    "SIM", # flake8-simplify
+    "RUF", # Ruff-specific rules
+]
+ignore = [
+    "E501",   # Line too long (handled by formatter)
+    "E741",   # Ambiguous variable name
+    "B008",   # Do not perform function calls in argument defaults
+    "B017",   # Assert raises on Exception - sometimes needed for testing
+    "T201",   # Print found (allow print statements)
+    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["fastapi_testing"]
+force-single-line = false
+combine-as-imports = true
+split-on-trailing-comma = true
+
+[tool.ruff.lint.pyupgrade]
+keep-runtime-typing = true
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+docstring-code-format = true
+docstring-code-line-length = "dynamic"
