--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -55,13 +55,9 @@ jobs:
     
     - name: Run linting
       run: |
-        uv run flake8 src tests
+        uv run ruff check src tests
     
-    - name: Run unit tests with coverage
-      run: |
-        uv run pytest tests/unit -v --tb=short --cov=src/psycopg_toolkit --cov-report=xml --cov-report=term
-    
-    - name: Setup JSONB test schema
+    - name: Run all tests (except performance) with coverage
       env:
         POSTGRES_HOST: localhost
         POSTGRES_PORT: 5432
@@ -69,27 +65,8 @@ jobs:
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: postgres
       run: |
-        uv run python tests/schema/manage_test_schema.py setup
-    
-    - name: Run integration tests
-      env:
-        POSTGRES_HOST: localhost
-        POSTGRES_PORT: 5432
-        POSTGRES_DB: psycopg_test
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
-      run: |
-        uv run pytest tests/integration -v --tb=short
-    
-    - name: Run edge case tests
-      env:
-        POSTGRES_HOST: localhost
-        POSTGRES_PORT: 5432
-        POSTGRES_DB: psycopg_test
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
-      run: |
-        uv run pytest tests/edge_cases -v --tb=short
+        # The default pytest configuration excludes performance tests
+        uv run pytest -v --tb=short --cov=src/psycopg_toolkit --cov-report=xml --cov-report=term
     
     - name: Upload coverage reports to Codecov
       if: matrix.python-version == '3.13'
