--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -64,8 +64,8 @@ jobs:
         if [ -f benchmark-output.txt ]; then
           echo "### Performance Metrics" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          # Extract lines containing performance data
-          grep -E "===|avg=|total=|per record=|overhead:" benchmark-output.txt | grep -v "test session starts" | grep -v "passed," >> $GITHUB_STEP_SUMMARY || true
+          # Extract lines containing performance data (handles both standard and extended format)
+          grep -E "===|avg=|total=|per record=|overhead:|Avg:|Min:|Max:|Median:|StdDev:|Throughput:|Results:|Batch" benchmark-output.txt | grep -v "test session starts" | grep -v "passed," | grep -v "collected" >> $GITHUB_STEP_SUMMARY || true
           echo '```' >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
