fix: codecov-action v5 require files to support multiple coverage files, not file in build-test.yml

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -74,7 +74,7 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: descoped/psycopg-toolkit
-        file: ./coverage.xml
+        files: ./coverage.xml
         fail_ci_if_error: false
 
   build:
