--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ test = [
     "pytest>=8.3.0",
     "pytest-asyncio>=0.25.2",
     "pytest-cov>=6.0.0",
-    "testcontainers[postgresql]>=4.9.1",
+    "testcontainers[postgres]>=4.12.0",
     "psutil>=6.1.0", # For performance benchmarks
 ]
 dev = [
