feat(repository): add array_fields and date_fields parameters
Add support for PostgreSQL arrays and automatic date conversion:

- Add array_fields parameter to preserve PostgreSQL array types (TEXT[], INTEGER[], etc.)
  instead of converting to JSONB when auto_detect_json=True
- Add date_fields parameter for automatic conversion between PostgreSQL DATE/TIMESTAMP
  and ISO string format for Pydantic models
- Array fields take precedence over JSON auto-detection
- Date fields handle both date objects and strings transparently
- Fix psycopg adapter check to prevent array handling issues
- Add comprehensive tests for both array and date field functionality
- Add examples/array_and_date_fields.py demonstrating usage patterns
- Update docs/jsonb_support.md with configuration examples

BREAKING CHANGE: psycopg adapters now disabled by default to prevent array handling conflicts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -173,6 +173,9 @@ extend-ignore = [
     "S105", # Allow hardcoded secrets in tests
     "T201",   # Print found (allow print statements)
 ]
+"src/psycopg_toolkit/repositories/base.py" = [
+    "C901", # _postprocess_data handles multiple concerns (date/JSON processing)
+]
 "examples/*" = [
     "T201", # Allow print statements in examples
     "T203", # Allow pprint in examples
