--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 requires-python = ">=3.11"
 readme = "README.md"
 license = { text = "MIT" }
-keywords = ["postgresql", "database", "async", "pool", "psycopg", "jsonb", "repository-pattern"]
+keywords = ["postgresql", "database", "async", "pool", "psycopg", "jsonb", "repository-pattern", "pgvector"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -39,9 +39,13 @@ test = [
     "pytest-cov>=6.0.0",
     "testcontainers[postgres]>=4.12.0",
     "psutil>=6.1.0", # For performance benchmarks
+    "pgvector>=0.4.1", # For pgvector integration tests
 ]
 dev = [
     "ruff>=0.8.0",
+]
+vector = [
+    "pgvector>=0.4.1",
 ]
 
 [build-system]
